examples/errors/e0117.sdm
module example <https://example.com/api> is

  property Foo

  structure Bar is
    name -> Foo
  end

end
